add details to native log format support

--- a/rfc/rfc-103/rfc-103.md
+++ b/rfc/rfc-103/rfc-103.md
@@ -103,7 +103,7 @@ Writer indexes should still function as is under this layout. Same for reader in
 
 ### Clustering
 
-Clustering will be restricted to **record key sorting** only. 
+Clustering will be restricted to **record key sorting** only.
 
 For **MOR + bucket index** setup, clustering is typically not needed.
 
@@ -153,35 +153,94 @@ During read and compaction, merging is performed using a **sorted merge algorith
 
 ---
 
-## Additional (Orthogonal) Features
+## Enhancement Features
 
 These features amplify the benefits of the LSM layout but are not strictly required by the layout itself but can optimize the performance and user experience of LSM.
 
-### 1) Parquet as Log File Format
+### Log format v2: native log file format
 
-**Benefits**
+#### Current log format (v1)
 
-- Vectorized processing
-- Better compression than Avro
-- Support pruning during reads
+Current log format is organized as below (ref: [tech spec v8](https://hudi.apache.org/learn/tech-specs-1point0#log-format)):
 
-Switching log file format from Avro to Parquet requires the following changes:
+```text
+#HUDI# (magic, 6 bytes)
+Block Size (8 bytes)
+Log Format Version (4 bytes)
+Block Type (4 bytes)
+Header Metadata (variable)
+Content Length (8 bytes)
+Content (variable) - data block, embedded Avro/Parquet/HFile binary data
+Footer Metadata (variable)
+Reverse Pointer (8 bytes)
+```
 
-0. Parquet log file naming format should remain consistent with existing Avro logs to ensure compatibility with existing MOR tables
-1. **Writer changes**: Block append operations are no longer supported. During writes, input data is sorted and deduplicated, then written directly to new Parquet files using a Create handler:
-   - For **Spark**: reuse the bulk insert write logic
-   - For **Flink**: refactor the upsert write logic. Data preparation, metadata field addition, and sorting logic can be reused, but the final write should use the Parquet Create Handler to write new Parquet log files
-2. **Reader changes**: When reading Parquet log files, skip the logic for handling delete blocks and damaged blocks. Read data directly using the Parquet Log Reader, enabling optimizations such as vectorized reads and column pruning
-3. **Markers**: Implement a new MOR marker write mechanism. Create markers are written during writes, similar to COW create markers
-4. **Rollback**: Handle both Marker-Based Rollback and Listing-Based Rollback scenarios:
-   - For MOR Parquet logs, damaged files are deleted directly (similar to COW)
-5. **Cleaning**: MOR Parquet log file cleaning directly deletes the corresponding Parquet log files (similar to COW Parquet)
+These fields are encoded into a custom binary format and stored in log files with extension like `.log.<version>_<write_token>`.
 
+#### Proposed log format v2
 
-**Behavior changes**
+The proposed new log format leverages native file format's metadata layer to capture the metadata fields defined by Hudi log format, while keeping the content field (data block). Take parquet for example:
 
-- MOR **rollback** deletes Parquet log files directly, instead of appending a delete block.
-- For **cleaning**, Parquet log files are deleted.
+```text
+Row group 1 (data)
+Row group 2 (data)
+...
+Footer
+  - Parquet schema
+  - Row group metadata
+  - key-value metadata <-- Hudi log format metadata goes in here
+```
+
+All Hudi log format metadata can be stored as key value pairs
+
+| Hudi log format metadata                     | Parquet footer key                        |
+|:---------------------------------------------|:------------------------------------------|
+| log format version                           | `hudi.log.format_version`                 |
+| block type                                   | `hudi.log.block_type`                     |
+| `INSTANT_TIME`                               | `hudi.log.instant_time`                   |
+| `TARGET_INSTANT_TIME`                        | `hudi.log.target_instant_time`            |
+| `SCHEMA`                                     | NA (use Parquet's native schema)          |
+| `COMMAND_BLOCK_TYPE`                         | `hudi.log.command_block_type`             |
+| `COMPACTED_BLOCK_TIMES`                      | `hudi.log.compacted_block_times`          |
+| `RECORD_POSITIONS`                           | `hudi.log.record_positions`               |
+| `BLOCK_IDENTIFIER`                           | `hudi.log.block_identifier`               |
+| `IS_PARTIAL`                                 | `hudi.log.is_partial`                     |
+| `BASE_FILE_INSTANT_TIME_OF_RECORD_POSITIONS` | `hudi.log.base_file_instant_of_positions` |
+
+#### Why native file format over embedded Parquet blocks?
+
+An alternative approach is to keep the V1 log format structure and embed Parquet-encoded data as block content. However, the embedding approach has drawbacks compared to using native Parquet files:
+
+| Aspect                    | Embedded Parquet (V1)                                                                                                      | Native Parquet (V2)                                          |
+|---------------------------|----------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------|
+| **Parquet optimizations** | Vectorized reads, predicate pushdown, column pruning available after block location                                        | Available directly at file read                              |
+| **Write model**           | Designed for append (for HDFS, not for object storage)                                                                     | Write-once model (aligns with object storage)                |
+| **Reading overhead**      | Must read log block header first, then use InLineFileSystem abstraction with offset translation to access embedded content | Direct Parquet file read with metadata immediately available |
+| **Tool compatibility**    | Requires Hudi-specific readers                                                                                             | Any Parquet-compatible tool can read                         |
+| **Compression**           | Block-level only                                                                                                           | Parquet's columnar encoding                                  |
+| **Schema storage**        | Duplicated in header and content                                                                                           | Consolidated in Parquet footer                               |
+
+#### Block type handling
+
+**Data blocks**: The entire file is a native Parquet file with `hudi.log.block_type` = `parquet_data`. Schema is stored natively in Parquet footer (no duplication).
+
+**Delete blocks**: Store delete records as Parquet with a delete schema containing record key, partition path, and ordering value. Set `hudi.log.block_type` = `delete`.
+
+**Command blocks**: Create Parquet file with zero row groups (metadata only). Set `hudi.log.block_type` = `command` along with `hudi.log.command_block_type` and `hudi.log.target_instant_time`.
+
+**CDC blocks**: Same structure as data blocks with CDC schema. Set `hudi.log.block_type` = `cdc`.
+
+#### Compatibility
+
+1. **File naming**: Remain consistent with existing log file naming to ensure compatibility
+2. **Writer changes**: Block append operations are no longer supported. During writes, input data is written directly to new Parquet files
+3. **Reader changes**: Detect format via magic bytes (Parquet magic vs Hudi magic).
+
+| Scenario                             | Behavior                                   |
+|:-------------------------------------|:-------------------------------------------|
+| V2 reader reading V1 files           | Supported (detect by magic bytes)          |
+| V1 reader reading V2 files           | Not supported (expected for older readers) |
+| Mixed V1/V2 files in same file slice | Supported (reader detects per-file)        |
 
 ### 2) File-Group Granular Compaction
 
