remove the hotspot cache

--- a/rfc/rfc-102/rfc-102.md
+++ b/rfc/rfc-102/rfc-102.md
@@ -98,20 +98,15 @@ each `BucketAssigner` task only needs to read from a subset of index shards.
 #### Index Cache
 
 Streaming workloads require low-latency processing of each record to achieve high throughput. Thus, each record lookup against the index 
-should complete really fast. Reading a RLI entry each time for each record will incur 10+ms of latency per record and seriously affect throughput. 
-
-We need two layers of caching to meet this requirement.
-
-**General-purpose hotspot cache:** The implementation will use an in-memory LRU (Least Recently Used) cache keyed by active upsert record keys. 
-Cache entries will be evicted when memory usage exceeds a configurable threshold.
+should complete really fast. Reading a RLI entry each time for each record will incur 10+ms of latency per record and seriously affect throughput.
 
 **New index mappings cache:** Additionally, a separate memory cache is needed for index mappings created during the current checkpoint. 
 These mappings are not yet committed to the Hudi table and are therefore invisible to MDT queries. This cache must not be cleared until the 
 corresponding checkpoint/instant is committed to Hudi, which indicates that the index payloads have also been committed. This ensures multiple
-records for the same record key (e,g insert to a key, followed by an update within the same commit boundary) are routed consitently to same 
+records for the same record key (e,g insert to a key, followed by an update within the same commit boundary) are routed consistently to same 
 file group, preserving the 1:1 mapping from record key to file group.
 
-The cache stores `key -> location` mappings at the record level, using an LRU eviction strategy with a configurable size limit. 
+The cache stores `key -> location` mappings at the record level, the items are evicted by checkpoint level when the checkpoints are committed to Hudi. 
 (Note that the MDT reader also maintains its own native file-level cache.) 
 
 The actual index writes occur in the `IndexWrite` operator and the location from the cache will be propagated downstream from the `BucketAssigner` operator, where cache lookups and MDT queries to determine record locations.
