--- a/rfc/rfc-102/rfc-102.md
+++ b/rfc/rfc-102/rfc-102.md
@@ -150,7 +150,12 @@ During job restarts or task failovers, there are scenarios where a Flink checkpo
    7. During the gap between steps 4 and 6, the `BucketAssigner` must access the uncommitted instant because the checkpoint was successful and the data is valid.
 
 For data table (DT) metadata, the pipeline will recommit the instant using the recovered table metadata. However, since the `BucketAssigner` operator is upstream of the `StreamWrite` operator, there is a time gap before these inflight instants can be recommitted. 
-We do not want to block `BucketAssigner` processing while waiting for inflight instants to be recommitted. 
+We do not want to block `BucketAssigner` processing while waiting for inflight instants to be recommitted. Because there is risk of dead-lock for the pipeline:
+
+1. the bucket assign op blocks for the instant to recommit;
+2. the instant ack msg got lost for some reason(so the instant could never be recommitted);
+3. the bucket assign op wil block forever and the current checkpoint never finish;
+4. the job finally hang there and do nothing.
 
 The proposed solution is to include these special inflight instants in index access queries—essentially, we need to support reading inflight instants from the MDT. 
 Only inflight instants whose corresponding Flink checkpoint has succeeded are included. Inflight instants without a successful checkpoint are excluded. See the Appendix for more details on job/task failover handling.
@@ -222,7 +227,14 @@ This asynchronous compaction is automatically enabled when indexing is active.
 
 ## Implementation Plan 
 
-<WIP: broken down into phases of implementation along with relevant GH issues.>
+The umbrella issue: [Support record index for Flink writer](https://github.com/apache/hudi/issues/17647)
+
+- [Add RLI access cache to support efficient lookup](https://github.com/apache/hudi/issues/17697)
+- [Adapter the BucketAssign function with the MDT backed index](https://github.com/apache/hudi/issues/17699)
+- [Support mini-batch access to the MDT index for bucket assign function](https://github.com/apache/hudi/issues/17842)
+- [Add basic infra to bookeep the mappings between checkpoint id to instant](https://github.com/apache/hudi/issues/17700)
+- [Add a new index write function](https://github.com/apache/hudi/issues/17701)
+- [Integrate the MDT compaction with existing compaction sub-pipeline and offline job](https://github.com/apache/hudi/issues/17702)
 
 ## Rollout/Adoption Plan
 
