minor update to blog tags and link

--- a/website/blog/2026-01-25-lakehouse-update-strategies.mdx
+++ b/website/blog/2026-01-25-lakehouse-update-strategies.mdx
@@ -2,10 +2,14 @@
 title: "Lakehouse update strategies: Copy-on-Write Vs. Merge-on-Read"
 authors:
 - name: Anirban Som
-category: technical-post
+category: community
 image: /assets/images/blog/2026-01-25-lakehouse-update-strategies.jpg
 tags:
 - Copy-on-Write
 - Merge-on-Read
 - Lakehouse
 ---
+
+import Redirect from '@site/src/components/Redirect';
+
+<Redirect url="https://medium.com/@anirsom2012/lakehouse-update-strategies-copy-on-write-vs-merge-on-read-7ddc9e6f2755">Redirecting... please wait!! </Redirect>
