nit updates to blog

--- a/website/blog/2026-01-25-lakehouse-update-strategies.mdx
+++ b/website/blog/2026-01-25-lakehouse-update-strategies.mdx
@@ -5,9 +5,9 @@ authors:
 category: community
 image: /assets/images/blog/2026-01-25-lakehouse-update-strategies.jpg
 tags:
-- Copy-on-Write
-- Merge-on-Read
-- Lakehouse
+- cow
+- mor
+- data lakehouse
 ---
 
 import Redirect from '@site/src/components/Redirect';
