update compaction strategy details

--- a/rfc/rfc-103/rfc-103.md
+++ b/rfc/rfc-103/rfc-103.md
@@ -1,4 +1,4 @@
-   <!--
+ <!--
   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
@@ -157,9 +157,9 @@ During read and compaction, merging is performed using a **sorted merge algorith
 
 These features amplify the benefits of the LSM layout but are not strictly required by the layout itself but can optimize the performance and user experience of LSM.
 
-### Log format v2: native log file format
+## Log format v2: native log file format
 
-#### Current log format (v1)
+### Current log format (v1)
 
 Current log format is organized as below (ref: [tech spec v8](https://hudi.apache.org/learn/tech-specs-1point0#log-format)):
 
@@ -177,7 +177,7 @@ Reverse Pointer (8 bytes)
 
 These fields are encoded into a custom binary format and stored in log files with extension like `.log.<version>_<write_token>`.
 
-#### Proposed log format v2
+### Proposed log format v2
 
 The proposed new log format leverages native file format's metadata layer to capture the metadata fields defined by Hudi log format, while keeping the content field (data block). Take parquet for example:
 
@@ -207,7 +207,7 @@ All Hudi log format metadata can be stored as key value pairs
 | `IS_PARTIAL`                                 | `hudi.log.is_partial`                     |
 | `BASE_FILE_INSTANT_TIME_OF_RECORD_POSITIONS` | `hudi.log.base_file_instant_of_positions` |
 
-#### Why native file format over embedded Parquet blocks?
+### Why native file format over embedded Parquet blocks?
 
 An alternative approach is to keep the V1 log format structure and embed Parquet-encoded data as block content. However, the embedding approach has drawbacks compared to using native Parquet files:
 
@@ -220,7 +220,7 @@ An alternative approach is to keep the V1 log format structure and embed Parquet
 | **Compression**           | Block-level only                                                                                                           | Parquet's columnar encoding                                  |
 | **Schema storage**        | Duplicated in header and content                                                                                           | Consolidated in Parquet footer                               |
 
-#### Block type handling
+### Block type handling
 
 **Data blocks**: The entire file is a native Parquet file with `hudi.log.block_type` = `parquet_data`. Schema is stored natively in Parquet footer (no duplication).
 
@@ -230,7 +230,7 @@ An alternative approach is to keep the V1 log format structure and embed Parquet
 
 **CDC blocks**: Same structure as data blocks with CDC schema. Set `hudi.log.block_type` = `cdc`.
 
-#### Compatibility
+### Compatibility
 
 1. **File naming**: Remain consistent with existing log file naming to ensure compatibility
 2. **Writer changes**: Block append operations are no longer supported. During writes, input data is written directly to new Parquet files
@@ -242,23 +242,34 @@ An alternative approach is to keep the V1 log format structure and embed Parquet
 | V1 reader reading V2 files           | Not supported (expected for older readers) |
 | Mixed V1/V2 files in same file slice | Supported (reader detects per-file)        |
 
-### 2) File-Group Granular Compaction
+## Hybrid Compaction Strategy
 
-Introduce a new compaction strategy that combines:
+Hudi currently supports two compaction types:
 
-- **Log compaction (L0)**
-- **Log → base compaction (L0 → L1)**
+- Full compaction (`WriteOperationType.COMPACT`): merge log files with the target base file within the same file group and produce a new base file
+- Log compaction (`WriteOperationType.LOG_COMPACT`): merge multiple log files into a larger log file within the same file group
 
-The compaction plan tracks individual **file groups** and determines whether each group needs:
+The key limitation is the operational overhead: users have to schedule 2 types of compaction, configure separate strategies, and run different jobs to optimize the storage layout for MOR tables.
 
-- L0 compaction only, or
-- L0 → L1 compaction
+In this RFC, we introduce a new hybrid compaction strategy that combines full compaction and log compaction. The compaction plan tracks individual file groups and determines which compaction type each file group needs.
 
-**Benefits**
+- Triggering: same as existing triggering strategy (`NUM_COMMITS`, `TIME_ELAPSED`, etc).
+- Scheduling/Planning: for each file group, analyze its file storage pattern (base file size, log file size distribution, number of log files, etc), assign each compaction operation to a type of `FULL` (compaction) or `LOG` (log compaction).
+  - Save plan to timeline (`.compaction.requested`)
+- Execution: read the plan, execute either full compaction or log compaction for each file group as per the plan.
+  - Upon finish, commit to timeline as `.commit`.
 
-- More granular control of file sizes
-- Skewed file groups can receive more compaction
-- Choose between L0 vs L0→L1 compaction based on file stats (count, size, etc.)
+### Benefits
+
+- More optimized storage layout: hybrid compaction strategy gives more granular control of file sizes at file group level, for example, skewed file groups can receive more compaction, file group with large base file and many small log files prefer log compaction first
+- Less operational overhead: 1 compaction strategy with 1 set of configs to manage scheduling and execution
+
+### How this feature relates to LSM tree layout
+
+The hybrid compaction strategy does not depend on using LSM tree layout.
+
+- When LSM tree layout is enabled, the hybrid compaction will engage sorted-merge algorithm to perform log and base file merging or log file merging.
+- When LSM tree layout is not enabled, the hybrid compaction will use hash-based merging (existing behavior).
 
 ---
 
