update log format section

--- a/rfc/rfc-103/rfc-103.md
+++ b/rfc/rfc-103/rfc-103.md
@@ -153,10 +153,6 @@ During read and compaction, merging is performed using a **sorted merge algorith
 
 ---
 
-## Enhancement Features
-
-These features amplify the benefits of the LSM layout but are not strictly required by the layout itself but can optimize the performance and user experience of LSM.
-
 ## Log format v2: native log file format
 
 ### Current log format (v1)
@@ -207,7 +203,7 @@ All Hudi log format metadata can be stored as key value pairs
 | `IS_PARTIAL`                                 | `hudi.log.is_partial`                     |
 | `BASE_FILE_INSTANT_TIME_OF_RECORD_POSITIONS` | `hudi.log.base_file_instant_of_positions` |
 
-### Why native file format over embedded Parquet blocks?
+### Why native file format over embedded Parquet log blocks?
 
 An alternative approach is to keep the V1 log format structure and embed Parquet-encoded data as block content. However, the embedding approach has drawbacks compared to using native Parquet files:
 
@@ -219,6 +215,8 @@ An alternative approach is to keep the V1 log format structure and embed Parquet
 | **Tool compatibility**    | Requires Hudi-specific readers                                                                                             | Any Parquet-compatible tool can read                         |
 | **Compression**           | Block-level only                                                                                                           | Parquet's columnar encoding                                  |
 | **Schema storage**        | Duplicated in header and content                                                                                           | Consolidated in Parquet footer                               |
+
+Using native log file format can also be extended to other file format, like [Lance](https://lance.org/format/file/) for example. The Hudi log format metadata can be stored in Lance file's [global buffer](https://lance.org/format/file/#external-buffers) to faciliate log file operations.
 
 ### Block type handling
 
@@ -241,6 +239,10 @@ An alternative approach is to keep the V1 log format structure and embed Parquet
 | V2 reader reading V1 files           | Supported (detect by magic bytes)          |
 | V1 reader reading V2 files           | Not supported (expected for older readers) |
 | Mixed V1/V2 files in same file slice | Supported (reader detects per-file)        |
+
+### How this feature relates to LSM tree layout
+
+Using the native log file format does not depend on using LSM tree layout. Tables will unlock the benefits as described in this section regardless of using the default or LSM tree layout.
 
 ## Hybrid Compaction Strategy
 
