--- a/rfc/rfc-100/rfc-100.md
+++ b/rfc/rfc-100/rfc-100.md
@@ -74,15 +74,15 @@ Below are the high-level requirements for this feature.
 1. Users must be able to define tables with a mix of structured (current types) and unstructured (blob type)
    columns
 2. Unstructured data can be stored inline (e.g small images right inside the file) or out-of-line (e.g
-   pointer to a multi-GB video file someplace). Out-of-line references can also include a position within the file which 
+   pointer to a multi-GB video file someplace). Out-of-line references can also include a (position, length) within the file which 
    allows multiple blobs to be stored within a single file to reduce the number of files in storage. 
    This decision should be made dynamically during write/storage time.
 3. All table life-cycle operations and table services work seamlessly across both column types.for e.g cleaning
-   the file slices should reclaim out-of-line blob data when the reference is managed by Hudi. 
+   the file slices should reclaim out-of-line blob data when the referred blob is managed by Hudi. 
    Clustering should be able re-organize records across file groups or even repack blobs if required.
 4. Hudi should expose controls at the writer level, to control whether to store blobs inline or out-of-line
-   based on size thresholds.
-5. Query engines like Spark should be able to read the unstructured data and materialize the values lazily to reduce memory pressure during shuffles.
+   based on size thresholds. Sane defaults should be supported for easy out-of-box experience. for e.g < 1MB is stored inline. > 16 MB is always stored out-of-line.
+5. Query engines like Spark should be able to read the unstructured data and materialize the values lazily to reduce memory pressure and massive data exchange volumes during shuffles.
 
 
 ## High-Level Design
@@ -91,7 +91,7 @@ The design introduces an abstraction that allows inline and out-of-line storage 
 Parquet format, while unstructured data can use specialized formats like Lance or optimized Parquet configurations or HFile for random-access.
 
 ### 1. Storage Abstraction
-We will add a Blob type to the HoodieSchema that encapsulates both inline and out-of-line storage strategies. This will allow the user to use a mix of storage strategies seamlessly.
+We will add a `blob` type to the HoodieSchema that encapsulates both inline and out-of-line storage strategies. This will allow the user to use a mix of storage strategies seamlessly.
 
 **Storage Schema**:
 ```json
@@ -106,8 +106,8 @@ We will add a Blob type to the HoodieSchema that encapsulates both inline and ou
       "name": "BlobReference",
       "fields": [
         {"name": "external_path", "type": "string"},
-        {"name": "position", "type": "long"},
-        {"name": "size", "type": "long"},
+        {"name": "offset", "type": "long"},
+        {"name": "length", "type": "long"},
         {"name": "managed", "type": "boolean"}
       ]
     }]}
@@ -120,7 +120,12 @@ The `managed` flag will be used by the cleaner to determine if an out-of-line bl
 Readers will be updated to allow for lazy loading of the blob data, even when it is inline. This will help reduce memory pressure during shuffles in distributed query engines like Spark.
 The readers will return a reference to the blob data in the form of a path, position, and size. This applies for both inline and out-of-line storage.
 
-The reader user will then use a UserDefinedFunction (UDF), or similar abstraction based on the engine, to read the blob data from the reference when needed.
+We will provide the user with a prebuilt transform to effectively read the out-of-line blob data. For example, for Spark datasets we will leverage a Map-Partitions to batch requests to read blob data when the rows correspond to ranges within the same file. 
+
+For Spark SQL we will provide a function that the user can leverage to materialize the bytes from the blobs. Example syntax:
+```sql
+SELECT id, url, resolve_blob(image_blob) as image_bytes FROM my_table;
+```
 
 ### 3. Writer
 #### Phase 1: Basic Blob Support
@@ -130,6 +135,19 @@ In this phase, we will not implement dynamic inline/out-of-line storage based on
 
 The writer should be flexible enough to allow the user to pass in a dataset with blob data as simple byte arrays or records matching the Blob schema defined above.
 
+Users will be able to create tables with Spark SQL as well by defining custom DDL that allows them to specify a column as a BLOB type. Example syntax:
+```sql
+CREATE TABLE my_table (
+    id STRING,
+    url STRING,
+    image_blob BLOB
+) USING hudi
+TBLPROPERTIES (
+  'hoodie.table.type' = 'MERGE_ON_READ',
+  'primaryKey ='id'
+)
+```
+
 #### Phase 2: Dynamic Inline/Out-of-Line Storage
 In this phase, the writer will be updated to support dynamic inline/out-of-line storage based on user configured size thresholds. The user will still be able to provide their own external path for out-of-line storage if desired.
 When the user provides blob data in the form of byte arrays, the writer will take arrays larger than the configured threshold and write them to files. The user can configure the file type used for this storage (e.g Parquet, HFile, Lance, etc).
@@ -137,14 +155,14 @@ The writer will then generate the appropriate BlobReference for the out-of-line 
 Multiple blobs can be written to the same file to reduce the number of files created in storage. All of these blobs will belong to the same file group for ease of management.
 
 **Configurations**: 
-- `hoodie.storage.blog.inline.threshold`: Size threshold in bytes for inline vs out-of-line storage
-- `hoodie.storage.blob.outofline.packing.threshold`: Size threshold in bytes for blobs that can be packed together in a single out-of-line file
-- `hoodie.storage.blob.outofline.packing.maxFileSize`: Size threshold in bytes for maximum size of an out-of-line blob file
-- `hoodie.storage.blob.outofline.format`: File format to use for out-of-line blob storage
+- `hoodie.storage.blob.inline.threshold`: Size threshold in bytes for inline vs out-of-line storage.
+- `hoodie.storage.blob.outofline.container.maxElementSize`: Size threshold in bytes for blobs that can be stored within a container file. Blobs larger than this threshold will be stored in their own individual files.
+- `hoodie.storage.blob.outofline.container.maxFileSize`: Size threshold in bytes for maximum size of an out-of-line blob container file.
+- `hoodie.storage.blob.outofline.format`: File format to use for out-of-line blob storage.
 
 **External Storage Layout**:
 ```
-{table_path}/.hoodie/blobs/{partition}/{file_group_id}/{column_name}/{instant}/{blob_id}
+{table_path}/.hoodie/blobs/{partition}/{column_name}/{instant}/{blob_id}
 ```
 
 #### Writer Optimizations for Blob Storage
@@ -168,7 +186,7 @@ file formats in the space and other well-established unstructured file formats.
 ### 4. Table Services
 #### Cleaning
 The cleaning service will be updated to identify the out-of-line blob references that are managed by Hudi and no longer referenced by any active file slices.
-To identify these references, we have two options:
+To identify these references, we have three options:
 1. Scan all active file slices to build a set of referenced blob IDs and then scan the file slices being removed to identify references in the removed slices that are not in the active set.
 2. Maintain metadata on the blob references contained in the file in the footer or metadata section of each base and log file. The cleaner can then read this metadata to identify blob references in the removed slices and check if they are still referenced in active slices.
 3. Maintain an index in the metadata table that tracks all blob references and their reference counts. The cleaner can then use this index to identify unreferenced blobs.
@@ -177,12 +195,12 @@ To identify these references, we have two options:
 
 #### Blob Compaction
 We will introduce a new form of compaction that allows for repacking of out-of-line blobs managed by Hudi to reduce the number of files in storage.
-The compaction will scan the out-of-line blob references that are active within the file group and repack them into new files based on a user configured target file size.
+The compaction will scan the out-of-line blob references that are active within the file group and repack them into new container files based on a user configured target file size.
 The repacking will also pack these blobs based on the base file row's ordering to improve read locality.
 
 #### Clustering
 Since the out-of-line blobs are part of the file group, managed references will need to be updated as part of the clustering operation.
-The clustering will need to read the blob references from the source files and rewrite them to new files. 
+The clustering will need to read the blob references from the source file groups and rewrite them to new target file groups. 
 These new files will be created in the same manner as the writer, using the configured inline/out-of-line storage strategy.
 
 ### 5. Query Engine Integration
