Apply suggestions from code review
Co-authored-by: vinoth chandar <vinothchandar@users.noreply.github.com>

--- a/rfc/rfc-103/rfc-103.md
+++ b/rfc/rfc-103/rfc-103.md
@@ -32,15 +32,17 @@ Main issue: https://github.com/apache/hudi/issues/14310
 
 ## Background
 
-LSM Trees (Log-Structured Merge-Trees) are data structures optimized for write-intensive workloads and are widely used in modern database systems such as Paimon, LevelDB, RocksDB, Cassandra, etc. By leveraging sequential writes and a tiered merge (compaction) mechanism, they offer clear advantages in:
+LSM Trees (Log-Structured Merge-Trees) are data structures optimized for write-intensive workloads and are widely used in modern database systems such as LevelDB, RocksDB, Cassandra, etc. They offer higher write performance typically compared to traditional B+Tree structures. 
 
-- **High write throughput**
+Systems like Paimon, adopt the LSM structure for data lake workloads as well, with a tiered merge (compaction) mechanism, they offer some valid tradeoffs in terms of :
+
+- **Lower memory requirements to merge logs compared to hash merge algorithms**
 - **Efficient, tiered compaction**
-- **Optimized read paths**
+- **Layout sorted by keys within each file group, that can be faster for point access**
 
 ## Goal
 
-This RFC proposes applying LSM-inspired principles (**sequential writes + tiered merges**) to improve the data organization protocol for **Hudi MOR tables**, and replacing **Avro** with **Parquet** as the on-disk format for individual log files, to achieve:
+This RFC proposes applying LSM-inspired principles (**sorted writes + tiered N-way merges**) to improve the data organization protocol for **Hudi MOR tables**, and favoring **Parquet** over **Avro** as the on-disk format for individual log files, to achieve:
 
 1. Improve the **read performance**, **write performance**, and **overall stability** of MOR tables—especially for **wide tables**—in scenarios such as:
    - predicate pushdown
