--- a/rfc/rfc-103/rfc-103.md
+++ b/rfc/rfc-103/rfc-103.md
@@ -32,24 +32,18 @@ Main issue: https://github.com/apache/hudi/issues/14310
 
 ## Background
 
-LSM Trees (Log-Structured Merge-Trees) are data structures optimized for write-intensive workloads and are widely used in modern database systems such as LevelDB, RocksDB, Cassandra, etc. They offer higher write performance typically compared to traditional B+Tree structures. 
+LSM Trees (Log-Structured Merge-Trees) are data structures optimized for write-intensive workloads and are widely used in modern database systems such as LevelDB, RocksDB, Cassandra, etc. They offer higher write performance typically compared to traditional B+Tree structures.
 
-Systems like Paimon, adopt the LSM structure for data lake workloads as well, with a tiered merge (compaction) mechanism, they offer some valid tradeoffs in terms of :
+Systems like Paimon, adopt the LSM structure for data lake workloads as well, with a tiered merge (compaction) mechanism, they offer some valid tradeoffs in terms of:
 
-- **Lower memory requirements to merge logs compared to hash merge algorithms**
-- **Efficient, tiered compaction**
-- **Layout sorted by keys within each file group, that can be faster for point access**
+- Lower memory requirements to merge logs compared to hash merge algorithms; efficient compaction
+- Layout sorted by keys within each file group, that can be faster for point lookup
 
 ## Goal
 
-This RFC proposes applying LSM-inspired principles (**sorted writes + tiered N-way merges**) to improve the data organization protocol for **Hudi MOR tables**, and favoring **Parquet** over **Avro** as the on-disk format for individual log files, to achieve:
+This RFC proposes applying LSM-inspired principles (**sorted writes + N-way merges**) to improve the data organization protocol for Hudi tables, and favoring native Parquet log file format over log format in Avro or embedded Parquet log block, to achieve improvements on the performance and stability of MOR compaction, and point lookup efficiency.
 
-1. Improve the **read performance**, **write performance**, and **overall stability** of MOR tables—especially for **wide tables**—in scenarios such as:
-   - predicate pushdown
-   - point lookups
-   - column/data pruning
-2. Improve the **performance** and **stability** of MOR **compaction**
-3. Increase the **compression ratio** of log files
+Comparing to Avro log format or log file with embedded Parquet log block, using native Parquet log format further achieves read performance improvements on native predicate pushdown, stats pruning, and better compression.
 
 ## Design Overview
 
@@ -75,15 +69,7 @@ To realize this layout:
 
 ### Table configs
 
-The layout should be enforced by a table property, for e.g. `hoodie.table.storage.layout=default|lsm_tree` (default value: `default`, which is current base/log file organization):
-
-- The config is not allowed to be set to `lsm_tree` for an existing table
-- The config is allowed to be set to `default` for an existing table
-- The config is set to `default` by default
-
-The layout is only applicable to MOR table, and not applicable to COW. When setting the layout config for a COW table, the persisted config for the layout will always be false.
-
-When an LSM-tree layout enabled MOR table is migrated to COW, the layout config will automatically set to `default`.
+The layout should be enforced by a table property, for e.g. `hoodie.table.storage.layout=default|lsm_tree` (default value: `default`, which is current base/log file organization). The layout applies to both COW and MOR table.
 
 ### Engine-agnostic
 
@@ -95,9 +81,9 @@ For example, Flink writers use buffer sort, the Flink sink must flush sorted rec
 
 Write operations should remain semantically unchanged when the layout is enabled.
 
-In MOR tables, when **small file handling** occurs, inserts may be bin-packed into file slices without log files, creating a new base file, the **sorted write** needs to be applied.
+In MOR tables, when **small file handling** occurs, inserts may be bin-packed into file slices without log files, creating a new base file, the **sorted write** needs to be applied. A `SortedCreateHandle` would be needed, similar to `SortedMergeHandle`.
 
-The most performant writer setup for LSM tree layout will be bucket index + bulk insert, which best utilizes sorted merging. The downside would be that small files may proliferate, which can be mitigated by doing log compaction.
+For MOR tables, the most performant writer setup for LSM tree layout will be bucket index + bulk insert, which best utilizes sorted merging. The downside would be that small files may proliferate, which can be mitigated by doing log compaction.
 
 ### Indexes
 
@@ -136,13 +122,21 @@ Optimizations:
 
 ## Core Feature 2: Sorted Merge Read / Compaction
 
-![03-k-way-merging](03-k-way-merging.png)
-
-During read and compaction, merging is performed using a **sorted merge algorithm** (e.g., **loser-tree** for k-way merge).
+During read and compaction, merging can be performed as k-way merging:
 
 - Resulting **log files** contain fully sorted records
 - Resulting **base files** contain fully sorted records
 - File group reads reuse the same sorted merge logic, with **predicate pruning** applied when present
+
+Merging write handles and file group reader should activate the code path for using the merging algorithm when LSM tree layout is enabled for the table.
+
+### K-way merging algorithm
+
+To optimize the merging performance, we propose a statemachine-based loser-tree merging algorithm to perform k-way merging.
+
+![03-k-way-merging](03-k-way-merging.png)
+
+<!-- TODO add algorithm detail -->
 
 ### Implementation tasks
 
@@ -242,7 +236,7 @@ Using native log file format can also be extended to other file format, like [La
 | V1 reader reading V2 files           | Not supported (expected for older readers) |
 | Mixed V1/V2 files in same file slice | Supported (reader detects per-file)        |
 
-### How this feature relates to LSM tree layout
+### How native log format (v2) relates to LSM tree layout
 
 Using the native log file format does not depend on using LSM tree layout. Tables will unlock the benefits as described in this section regardless of using the default or LSM tree layout.
 
@@ -268,7 +262,7 @@ In this RFC, we introduce a new hybrid compaction strategy that combines full co
 - More optimized storage layout: hybrid compaction strategy gives more granular control of file sizes at file group level, for example, skewed file groups can receive more compaction, file group with large base file and many small log files prefer log compaction first
 - Less operational overhead: 1 compaction strategy with 1 set of configs to manage scheduling and execution
 
-### How this feature relates to LSM tree layout
+### How hybrid compaction strategy relates to LSM tree layout
 
 The hybrid compaction strategy does not depend on using LSM tree layout.
 
@@ -290,24 +284,3 @@ Writers, compaction runners, and readers will respect this setting and perform:
 
 - **sorted writes**
 - **sorted merge** reads/compactions
-
----
-
-## Benefits
-
-### Storage
-
-- Better compression ratio (via **Parquet log files**)
-
-### Compaction
-
-- Sorted merge vs hashing-based merge:
-  - improves performance
-  - reduces memory footprint
-
-### Read
-
-- Parquet log supports:
-  - vectorized reads
-  - pruning
-- improved point lookups and range queries
