update algorithm detail

--- a/rfc/rfc-103/rfc-103.md
+++ b/rfc/rfc-103/rfc-103.md
@@ -136,7 +136,53 @@ To optimize the merging performance, we propose a statemachine-based loser-tree 
 
 ![03-k-way-merging](03-k-way-merging.png)
 
-<!-- TODO add algorithm detail -->
+This part assumes k pre-sorted input streams and implements high-throughput merge reading in SortMergeReaderLoserTreeStateMachine by combining two mechanisms:
+
+- A loser tree for efficient global winner selection.
+- A state machine for continuous same-key consumption and transition control.
+
+#### 1. Design Goals
+
+- Minimize latency and memory overhead for multi-way sorted merge.
+- Guarantee deterministic ordering for records with the same key.
+- Support streaming merge semantics (including delete/upsert) without building large per-key buffers.
+
+#### 2. Core Structures
+
+- tree[]: loser-tree internal nodes, where tree[0] is the current champion leaf index.
+- leaves[]: current head record of each input stream plus node state.
+- firstSameKeyIndex: fast jump pointer to another contender with the same key.
+- States:
+    - WINNER_WITH_NEW_KEY
+    - WINNER_WITH_SAME_KEY
+    - WINNER_POPPED
+    - LOSER_WITH_NEW_KEY
+    - LOSER_WITH_SAME_KEY
+    - LOSER_POPPED
+
+#### 3. Execution Flow
+
+1. Initialization
+   Read one record from each input stream, set initial state, and build the loser tree via adjust.
+2. Winner/loser propagation
+   adjust only updates one root path (O(log k)). Comparison is key-based; if equal, sourceIndex is used as a deterministic tie-breaker.
+3. Same-key linking
+   Equal-key comparisons mark losers as LOSER_WITH_SAME_KEY and record firstSameKeyIndex for fast same-key handoff.
+4. Pop and advance
+   popWinner() marks current winner as popped and re-adjusts:
+    - If same-key contenders exist, it switches directly to WINNER_WITH_SAME_KEY.
+    - Otherwise, popAdvance() pulls the next record from that source and resumes normal competition.
+5. Group merge output
+   The iterator repeatedly pops and merges all records of one key using mergeFunctionWrapper, then emits one merged result for that key.
+
+#### 4. Performance Characteristics
+
+- Time complexity: O(N log k) for N total records.
+- Space complexity: O(k) (one active record per stream plus tree metadata).
+- Benefits:
+    - Fewer redundant comparisons than naive merge approaches.
+    - No large same-key temporary list.
+    - Stable, reproducible merge order via deterministic tie-breaking.
 
 ### Implementation tasks
 
